syntax = "proto3";

package portal.v1;

import "google/api/annotations.proto";
import "api/basic/v1/basic.proto";
import "validate/validate.proto";

option go_package = "xhappen/api/portal/v1;v1";

// The greeting service definition.
service User {
  // Sends SMS code
  rpc SendSMSCode (SMSCodeRequest) returns (SMSCodeReply)  {
        option (google.api.http) = {
          post: "/user/smscode",
          body: "*",
        };
  }

  // mobile login
  rpc LoginByMobile (LoginByMobileRequest) returns (LoginByMobileReply)  {
        option (google.api.http) = {
          post: "/user/login",
          body: "*",
        };
  }

  // mobile login
  rpc Logout (LogoutRequest) returns (LogoutReply)  {
        option (google.api.http) = {
          post: "/user/logout",
          body: "*",
        };
  }

  // mobile login
  rpc DeRegister (DeRegisterRequest) returns (DeRegisterReply)  {
        option (google.api.http) = {
          post: "/user/deregister",
          body: "*",
        };
  }
}

message SMSCodeRequest {
  string mobile = 1 [(validate.rules).string = {
    pattern: "^1(3\\d|4[0-14-9]|5[0-35-9]|6[2567]|7[0-8]|8\\d|9[0-35-9])\\d{8}$",
    len: 11, 
  }];
  string clientId = 2;
}

message SMSCodeReply {

}

message LoginByMobileRequest {
  string mobile = 1;
  string clientId = 2;
  string smsCode = 3;
}

message LoginByMobileReply {
  string token = 1;
  basic.v1.User user = 2;
}

message LogoutRequest {
  
}

message LogoutReply {
  
}


message DeRegisterRequest {
  string smsCode = 1;
}

message DeRegisterReply {
  
}